--- a/package.json
+++ b/package.json
@@ -24,11 +24,16 @@
     "@angular/router": "^6.0.2",
     "bluebird": "^3.5.2",
     "body-parser": "^1.18.3",
+    "connect-flash": "^0.1.1",
+    "connect-mongo": "^2.0.1",
+    "cookie-parser": "^1.4.3",
     "core-js": "^2.5.4",
     "express": "^4.16.3",
+    "express-session": "^1.15.6",
     "http-errors": "^1.7.1",
     "mongoose": "^5.2.15",
     "morgan": "^1.9.1",
+    "passport": "^0.4.0",
     "rxjs": "^6.0.0",
     "serve-favicon": "^2.5.0",
     "zone.js": "^0.8.26"
